Revert "FDG-10538 fixed padding gap, fixed column spacing"
This reverts commit 617e14ff298e5e7e0c1f1237cdb280741b29f851.

--- a/src/components/date-range-month-picker/date-range-month-picker.module.scss
+++ b/src/components/date-range-month-picker/date-range-month-picker.module.scss
@@ -4,11 +4,6 @@
   margin-left: 1rem;
 }
 
-.dateRangePickerPadded {
-  margin-left: 1rem;
-  padding-bottom: 1rem;
-}
-
 .dropdownButton {
   border-radius: 0.5rem;
   background: #eff6fb;
